tests/failing/pi2.tail
let v1:S(int,10000000) = 10000000 in
let v10:[double]0 = muld(i2d(4),divd(i2d(reduce{[int],[0]}(addi,0,each{[bool,int],[1]}(b2i,each{[double,bool],[1]}(fn v6:[double]0 => gtd(i2d(b2iV(tt)),v6),reduce{[double],[1]}(addd,0.00,each{[double,double],[2]}(fn v3:[double]0 => powd(v3,i2d(2)),each{[bool,double],[2]}(fn v2:[bool]0 => roll(b2i(v2)),reshape{[bool],[1,2]}([v1,2],[ff])))))))),i2d(v1))) in
let v11:[double]0 = absd(subd(v10,muld(i2d(b2iV(tt)),pi))) in
let v12:[char]1 = prArrC(['C','o','m','p','u','t','e','d',' ','p','i',':']) in
let v13:[double]0 = prSclD(v10) in
let v14:[char]1 = prArrC(['E','r','r','o','r',':']) in
let v15:[double]0 = prSclD(v11) in
i2d(b2i(gtd(0.00,v11)))
